# Multivehicle3DAdaptive

./: README.md
adaframe_examples/: CMakeLists.txt  README.md  package.xml
adaframe_examples/scripts/: SpatialLogGP.py  Spatial_GP.py  __douro_river.py  _douro_river.py  auv_governor_example.py  chla_shoreside.py  douro_river.py  example2.py  gp_example.py  kongsfjorden.py  naa2_kongsfjorden.py  naa_kongsfjorden.py  natural_cubic_spline.py  shoreside.py
adaframe_examples/scripts/tests/: test.py
imc_ros_interface/: CMakeLists.txt  README.md  package.xml  setup.py
imc_ros_interface/include/imc_ros_bridge/: imc_ros_bridge_server.h
imc_ros_interface/include/imc_ros_bridge/imc_to_ros/: Abort.h  Chlorophyll.h  Depth.h  EntityList.h  EntityState.h  EstimatedState.h  FollowRefState.h  Heartbeat.h  IridiumMsgRx.h  IridiumTxStatus.h  PlanControl.h  PlanControlState.h  PlanDB.h  Salinity.h  Temperature.h  VehicleMedium.h  VehicleState.h
imc_ros_interface/include/imc_ros_bridge/ros_to_imc/: DesiredHeading.h  DesiredHeadingRate.h  DesiredPitch.h  DesiredRoll.h  EntityList.h  EstimatedState.h  FollowReference.h  IridiumMsgTx.h  LogBookEntry.h  PlanDB.h  Reference.h  RemoteState.h  ReportControl.h  Sms.h  SonarData.h
imc_ros_interface/include/imc_tcp_link/: TcpLink.hpp  imc_handle.h
imc_ros_interface/launch/: bridge.launch  template.launch
imc_ros_interface/msg/: Abort.msg  Chlorophyll.msg  Depth.msg  DesiredSpeed.msg  DesiredZ.msg  EntityList.msg  EntityState.msg  EstimatedState.msg  FollowRefState.msg  FollowReference.msg  Header.msg  Heartbeat.msg  IridiumMsgRx.msg  IridiumMsgTx.msg  IridiumTxStatus.msg  LogBookEntry.msg  PlanControl.msg  PlanControlState.msg  Reference.msg  ReportControl.msg  Salinity.msg  Sms.msg  Temperature.msg  VehicleMedium.msg  VehicleState.msg  Waypoint.msg
imc_ros_interface/scripts/: _auv_handler.py  auv_handler.py  gp_example.ini  naa_auv_handler.py
imc_ros_interface/src/: bridge_node.cpp  imc_handle.cpp
imc_ros_interface/src/imc_to_ros/: Abort.cpp  Chlorophyll.cpp  Depth.cpp  EntityList.cpp  EntityState.cpp  EstimatedState.cpp  FollowRefState.cpp  Heartbeat.cpp  IridiumMsgRx.cpp  IridiumTxStatus.cpp  PlanControl.cpp  PlanControlState.cpp  PlanDB.cpp  Reference.cpp  Salinity.cpp  Temperature.cpp  VehicleMedium.cpp  VehicleState.cpp
imc_ros_interface/src/ros_to_imc/: DesiredHeading.cpp  DesiredHeadingRate.cpp  DesiredPitch.cpp  DesiredRoll.cpp  EntityList.cpp  EstimatedState.cpp  FollowReference.cpp  IridiumMsgTx.cpp  LogBookEntry.cpp  PlanDB.cpp  Reference.cpp  RemoteState.cpp  ReportControl.cpp  Sms.cpp  SonarData.cpp
